--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,44 @@
-/* styles-v5 */
+/* V5 Stylesheet - Christopher Barclay Portfolio Website */
+
+/* Page Defaults 
+
+	Page Width: 
+			width: 60%;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			margin: auto;
+
+	Font and Font-Size
+		Header: 
+			Font: Raleway, sarif, #222
+			H1: 2.5em, bold (same as body h2)
+			H2: 1.2em, bold (same as body h4)
+		Body: 
+			Default Font: Montserrat, arial, #222
+			H1: 5.5em, bold
+			H2: 2.5em, bold
+			H3: 2em? bold?
+			H4: 1.2em, bold
+			P: 1.2em?
+			Copyright: 0.75em
+			Media H1: 1.5?
+			Media H2: 1em?
+
+	Colors: 
+		"Off-White":
+			Ivory: #fffff0
+			Whitesmoke: #f5f5f5
+			Snow: #fffafa
+		White: #fff
+		Dark text: #222
+		Light text: #6c757d
+
+		Purple colors
+			Flat, light purple: #6e4f89
+			Vibrant, dark purple: #6315a8
+*/
+
 
 body {
 	margin: 0;
@@ -6,16 +46,31 @@ body {
 	left: 0;
 	overflow-x: visible;
 	overflow-y: scroll;
-    background-color: #222;
+  background-color: #222;
 	background-image: linear-gradient(to bottom right, #6315a8, #6e4f89);
 }
 
+/* Page Defaults (not the header) */
+h1 {font-size: 5.5em; font-weight: bold;}
+h2 {font-size: 2.5em; font-weight: bold;}
+h3 {font-size: 2em; font-weight: bold;}
+h4 {font-size: 1.2em; font-weight: bold;}
+p {font-size: 1.2em; font-weight: normal;}
+
+div#about, div#skills, div#resume  {
+	width: 60%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	margin: auto;
+}
+
 /* HEADER */
-div.header { 
+#header { 
 	top: 0;
 	left: 0;
 	display: block;
-	position: static;
+	position: fixed;
 	width: 100%;
 	margin: auto;
 	background-color: #6315a8;
@@ -24,6 +79,9 @@ div.header {
     padding-bottom: 15px;
 }
 
+/* Header Defaults */
+#header h1 {font-size: 2.5em; font-weight: bold;}
+#header h2 {font-size: 1.2em; font-weight: bold;}
 
 /* LOGO area */
 div#logo {
@@ -47,19 +105,19 @@ img.logo {
 	margin-top: -5px;
 	margin-right: 10px;
 }
-div.name {
+#logo-name-title {
 	display: inline-block;
 	text-align: left;
 	vertical-align: top;
 }
-div#name {
+#logo-name-title h1 {
 	letter-spacing: 1px;
 	font-size: 1.5em;
 	font-weight: bold;
-	padding-bottom: 7px;
 }
-div#title {
+#logo-name-title h2 {
 	font-size: 1.2em;
+	font-weight: normal;
 }
 /* end LOGO area */
 
@@ -110,7 +168,7 @@ nav {
 
 
 /* ABOUT Section */
-#about-page {
+#about {
 	display: block;
 	padding: 0;
 	margin: auto;
@@ -356,7 +414,7 @@ div#copyright {
 	.nav-btn a {
 		padding: 0.20em;
 	}
-	#about-page {
+	#about {
         height: auto;
         padding-bottom: 50px;
 	}
